Closed Bug 1220077 Opened 10 years ago Closed 8 years ago

[CID 749505] Failing to save or free storage allocated by SECU_GetPasswordString(NULL, prompt)

Categories

(NSS :: Libraries, defect, P3)

defect

Tracking

(firefox45 affected)

RESOLVED FIXED
Tracking Status
firefox45 --- affected

People

(Reporter: franziskus, Assigned: jallmann)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, good-first-bug)

Attachments

(1 file)

I'm not sure if this is ever used, but it doesn't seem to work and is leaky [1]. The password returned here is ignored and not used otherwise. [1] https://dxr.mozilla.org/mozilla-central/source/security/nss/cmd/lib/secutil.c#242
Keywords: good-first-bug
Priority: -- → P3
Comment on attachment 8928149 [details] Bug 1220077, fixed leak in unused passwort prompt, r=franziskus Franziskus Kiefer [:fkiefer or :franziskus] has approved the revision. https://phabricator.services.mozilla.com/D233#5620
Attachment #8928149 - Flags: review+
Assignee: nobody → jallmann
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: