Bug 1220077, fixed leak in unused passwort prompt, r=franziskus

Reviewers: franziskus

Reviewed By: franziskus

Bug #: 1220077

Differential Revision: https://phabricator.services.mozilla.com/D233